objects/FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The financial account number.</inlineHelpText>
        <label>Account Number</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date that the financial account was closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the financial account has been closed.</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The account description.  This can be either a user defined description/nick name or a system assigned value (e.g. charge off).</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date that the financial account was opened.  If the account has been re-opened, it will be the original open date.</inlineHelpText>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrimaryRolesJson__c</fullName>
        <description>This field is used by the batch process that inserts the financial accounts.  It will contain an array of person numbers that are in a primary role (e.g. tax owner, non-tax owner or signer).  This is used in a trigger to create/delete the association between a financial account and a person record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Roles JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductMajorCode__c</fullName>
        <inlineHelpText>The DNA major account type code.</inlineHelpText>
        <label>Product Major Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BKCK</fullName>
                </value>
                <value>
                    <fullName>CK</fullName>
                </value>
                <value>
                    <fullName>CML</fullName>
                </value>
                <value>
                    <fullName>CNS</fullName>
                </value>
                <value>
                    <fullName>CRIF</fullName>
                </value>
                <value>
                    <fullName>EXT</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>LEAS</fullName>
                </value>
                <value>
                    <fullName>MLN</fullName>
                </value>
                <value>
                    <fullName>MTG</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RTMT</fullName>
                </value>
                <value>
                    <fullName>SAV</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductMinorCode__c</fullName>
        <inlineHelpText>The DNA minor account type code.</inlineHelpText>
        <label>Product Minor Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>107</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>136</fullName>
                </value>
                <value>
                    <fullName>137</fullName>
                </value>
                <value>
                    <fullName>138</fullName>
                </value>
                <value>
                    <fullName>139</fullName>
                </value>
                <value>
                    <fullName>154</fullName>
                </value>
                <value>
                    <fullName>CD03</fullName>
                </value>
                <value>
                    <fullName>CD06</fullName>
                </value>
                <value>
                    <fullName>CD12</fullName>
                </value>
                <value>
                    <fullName>CD18</fullName>
                </value>
                <value>
                    <fullName>CD24</fullName>
                </value>
                <value>
                    <fullName>CD36</fullName>
                </value>
                <value>
                    <fullName>CD48</fullName>
                </value>
                <value>
                    <fullName>CD60</fullName>
                </value>
                <value>
                    <fullName>CKBA</fullName>
                </value>
                <value>
                    <fullName>CKBS</fullName>
                </value>
                <value>
                    <fullName>CKCL</fullName>
                </value>
                <value>
                    <fullName>CKEC</fullName>
                </value>
                <value>
                    <fullName>CKMM</fullName>
                </value>
                <value>
                    <fullName>CP06</fullName>
                </value>
                <value>
                    <fullName>CP60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Assumed</fullName>
                </value>
                <value>
                    <fullName>Chargeoff</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed with Balances Remaining</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Loan Denied</fullName>
                </value>
                <value>
                    <fullName>Non-Accrual</fullName>
                </value>
                <value>
                    <fullName>Originating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>